--- a/force-app/main/default/classes/ElementVersionRepository.cls
+++ b/force-app/main/default/classes/ElementVersionRepository.cls
@@ -1,4 +1,9 @@
 public class ElementVersionRepository {
+    public Id createElementVersion(ElementVersion__c elementVersion) {
+        insert elementVersion;
+        return elementVersion.Id;
+    }
+    
     public ElementVersion__c getLatestVersionByElementId(Id elementId) {
         return [SELECT Id, Name, Body__c, CreatedBy.Name, LastModifiedBy.Name, Element__c
                 FROM ElementVersion__c
@@ -12,13 +17,5 @@ public class ElementVersionRepository {
                 FROM ElementVersion__c
                 WHERE Element__c = :elementId
                 ORDER BY CreatedDate DESC];
-    }
-    
-    public void createElementVersion(ElementVersion__c elementVersion) {
-        insert elementVersion;
-    }
-    
-    public void updateElementVersion(ElementVersion__c elementVersion) {
-        update elementVersion;
     }
 }
