--- a/force-app/main/default/classes/PageElementRepository.cls
+++ b/force-app/main/default/classes/PageElementRepository.cls
@@ -1,6 +1,6 @@
 public class PageElementRepository {
     public List<PageElement__c> getPageElementsByPageId(Id pageId) {
-        return [SELECT Id, Element__c, Index__c, CreatedBy.Name, LastModifiedBy.Name, Page__c
+        return [SELECT Id, Element__c, Element__r.Body__c, Index__c, CreatedBy.Name, LastModifiedBy.Name, Page__c
                 FROM PageElement__c
                 WHERE Page__c = :pageId
                 ORDER BY Index__c ASC];
