--- a/force-app/main/default/classes/SurveyDTO.cls
+++ b/force-app/main/default/classes/SurveyDTO.cls
@@ -1,6 +1,6 @@
 public class SurveyDTO {
     @AuraEnabled public Id id { get; set; }
-    @AuraEnabled public String name { get; set; }
+    @AuraEnabled public String title { get; set; }
     @AuraEnabled public String createdBy { get; set; }
     @AuraEnabled public String lastModifiedBy { get; set; }
     @AuraEnabled public String owner { get; set; }
@@ -9,7 +9,7 @@ public class SurveyDTO {
     
     public SurveyDTO(Survey__c survey, SurveyVersion__c latestVersion) {
         this.id = survey.Id;
-        this.name = survey.Name;
+        this.title = survey.Title__c;
         this.createdBy = survey.CreatedBy.Name;
         this.lastModifiedBy = survey.LastModifiedBy.Name;
         this.owner = survey.Owner.Name;
