--- a/force-app/main/default/classes/SurveyRepository.cls
+++ b/force-app/main/default/classes/SurveyRepository.cls
@@ -1,13 +1,13 @@
 public class SurveyRepository {
     public Survey__c getSurveyById(Id surveyId) {
-        return [SELECT Id, Name, CreatedBy.Name, LastModifiedBy.Name, Owner.Name
+        return [SELECT Id, Title__c, CreatedBy.Name, LastModifiedBy.Name, Owner.Name
                 FROM Survey__c
                 WHERE Id = :surveyId
                 LIMIT 1];
     }
     
     public List<Survey__c> getAllSurveys() {
-        return [SELECT Id, Name, CreatedBy.Name, LastModifiedBy.Name, Owner.Name
+        return [SELECT Id, Title__c, CreatedBy.Name, LastModifiedBy.Name, Owner.Name
                 FROM Survey__c];
     }
     
